# components/approval/backend/src/main/kotlin/io/holunda/polyflow/example/process/approval/rest/RequestController.kt
@@ -13,6 +13,7 @@ import io.holunda.polyflow.view.auth.User
 import io.holunda.polyflow.view.auth.UserService
 import io.holunda.polyflow.view.query.data.DataEntriesForUserQuery
 import io.holunda.polyflow.view.query.data.DataEntriesQueryResult
+import mu.KLogging
 import org.axonframework.messaging.GenericMessage
 import org.axonframework.queryhandling.QueryGateway
 import org.springframework.http.ResponseEntity
@@ -20,6 +21,7 @@ import org.springframework.http.ResponseEntity.noContent
 import org.springframework.http.ResponseEntity.ok
 import org.springframework.web.bind.annotation.*
 import java.util.*
+import javax.validation.Valid
 
 @RestController
 @RequestMapping(path = [Rest.REST_PREFIX])
@@ -31,6 +33,8 @@ class RequestController(
   private val objectMapper: ObjectMapper
 ) : RequestApi {
 
+  companion object: KLogging()
+
 
   override fun startNewApproval(
     @RequestHeader(value = "X-Current-User-ID", required = true) xCurrentUserID: String,
@@ -40,6 +44,9 @@ class RequestController(
 
     val revisionNumber = revision.orElseGet { "1" }.toLong()
     val username = userService.getUser(xCurrentUserID).username
+
+    logger.info { "Starting new process by submitting a draft of ${request.subject}." }
+
     requestApprovalProcessBean.submitDraft(draft(request), username, revisionNumber)
 
     return noContent().build()
@@ -51,10 +58,30 @@ class RequestController(
     @PathVariable("id") id: String
   ): ResponseEntity<ApprovalRequestDto> {
 
+    logger.info { "Retrieving a request with id $id." }
     // val username = userService.getUser(xCurrentUserID).username
     val request = requestService.getRequest(id, 1)
 
     return ok(approvalRequestDto(request))
+  }
+
+  override fun updateApprovalRequest(
+    @RequestHeader(value = "X-Current-User-ID", required = true) xCurrentUserID: String,
+    @PathVariable("id") id: String,
+    @Valid @RequestBody(required = false) approvalRequestDto: ApprovalRequestDto
+  ): ResponseEntity<Void> {
+
+    logger.info { "Modifying a request with id $id." }
+
+    val username = userService.getUser(xCurrentUserID).username
+    requestService.updateRequest(
+      id = id,
+      request = request(approvalRequestDto),
+      username = username,
+      revision = 1
+    )
+
+    return noContent().build()
   }
 
   override fun getApprovalForUser(
@@ -62,13 +89,16 @@ class RequestController(
     @RequestParam(value = "revision", required = false) revision: Optional<String>
   ): ResponseEntity<List<ApprovalRequestDto>> {
 
+
     val revisionNumber = revision.orElse("1").toLong()
-    val user = userService.getUser(xCurrentUserID).username
+    val username = userService.getUser(xCurrentUserID).username
+
+    logger.info { "Retrieving requests visible for $username." }
 
     val result = queryGateway.query(
       GenericMessage.asMessage(
         DataEntriesForUserQuery(
-          user = User(user, setOf()),
+          user = User(username, setOf()),
           page = 1,
           size = Int.MAX_VALUE,
           sort = "",
